# mini-claude-code-ai-agent

./: LICENSE  README.md  main.py  pyproject.toml  test_get_files_info.py
agent/: call_function.py
functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
