[project]
name = "mini-claude-code-ai-agent"
version = "0.1.0"
description = """A limited functionality clone of Claude Code using Google Gemini's free tier model. It relies on a
limited set of tools(functions) that we add to the repository."""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai==1.12.1",
    "python-dotenv==1.1.0",
]
